--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 </head>
 <body>
     <nav>
-        <button><a href="/login.html">Log In</a></button>
-        <button><a href="/signup.html">Get Started</a></button>
+        <button><a href="assets/login.html">Log In</a></button>
+        <button><a href="assets/signup.html">Get Started</a></button>
     </nav>
     <header>
         <h1 class="fade-in">Reduce Food Waste, One Step at a Time</h1>
         <p class="fade-in">Join us in minimizing food wastage with AI-powered suggestions.</p>
-        <button class="cta fade-in"><a href="/signup.html">Get Started — it's free →</a></button>
+        <button class="cta fade-in"><a href="assets/signup.html">Get Started — it's free →</a></button>
     </header>
     <div class="spline-container">
         <iframe src='https://my.spline.design/particles-a2179f604605294c458a000b83c61e77/' frameborder='0'></iframe>
