--- a/assets/login.html
+++ b/assets/login.html
@@ -106,7 +106,7 @@
     <form id="loginForm">
       <input type="email" id="email" placeholder="Email Address" required />
       <input type="password" id="password" placeholder="Password" required />
-      <button type="submit"><a href="opening.html">Login</a></button>
+      <button type="submit"><a href="https://foodwaste-kappa.vercel.app/assets/opening.html">Login</a></button>
     </form>
     <p>Don't have an account? <a href="signup.html">Sign up</a></p>
 
